--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdf-lib": "^1.17.1",
     "pg": "^8.12.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
