--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "node": "22"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.750.0",
     "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
@@ -25,11 +27,12 @@
     "body-parser": "^1.20.2",
     "calendar-link": "^2.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "node": "^20.2.0",
     "nodemailer": "^6.9.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
