--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "nodemailer": "^6.9.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "pdf-lib": "^1.17.1",
-    "pg": "^8.12.0",
+    "pg": "^8.13.3",
+    "pg-hstore": "^2.3.4",
     "redis": "^4.7.0",
+    "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
